--- a/src/_variablesAndMixins.scss
+++ b/src/_variablesAndMixins.scss
@@ -8,6 +8,7 @@ $tertiaryColor: color.adjust($color-secondary, $hue: 120deg);
 
 $color-background-primary: white;
 $color-background-secondary: rgba(8, 35, 125, 0.174);
+$color-background-secondary-light: rgba(8, 35, 125, 0.076);
 
 //MIXINS
 
