--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,6 @@
 @import "variablesAndMixins";
 @import "generalClasses";
+@import "calculatorContainer";
 @import "score";
 @import "results";
 @import "options";
@@ -8,16 +9,3 @@
 @import "timeCounter";
 @import "buttonsContainer";
 @import "table";
-
-.calculator_container {
-  position: relative;
-  background-color: $color-background-primary;
-  height: 90vh;
-  margin: 0 auto;
-  border-radius: 1.5rem;
-
-  @media screen and (min-width: 450px) {
-    width: 400px;
-    height: 98vh;
-  }
-}
