--- a/src/_buttonsContainer.scss
+++ b/src/_buttonsContainer.scss
@@ -6,14 +6,14 @@
   margin-bottom: 15px;
   border-radius: 0 200px 200px 0;
   background-color: $color-background-secondary;
-  position: fixed;
+  position: absolute;
   left: 0;
 
-  &-1 {
+  &-top {
     bottom: calc(5vh + 120px);
   }
 
-  &-2 {
+  &-bottom {
     bottom: 5vh;
   }
 }
